--- a/css/constr_style.css
+++ b/css/constr_style.css
@@ -1,3 +1,7 @@
+html, body {
+    width:  100%;
+    height: 100%;
+}
 .btn_constr {
     box-sizing: border-box;
     position: fixed;
@@ -22,21 +26,37 @@
 }
 .toolbar_constr {
     width: 200px;
-    height: 250px;
+    height: 150px;
     border-radius: 5px;
     background-color: rgba(0,0,0,.4);
+    position: fixed;
+    top: 86px;
+    right: 11px;
 }
 .toolbar_constr__container {
     width: 180px;
     margin: 10px auto;
+    text-align: center;
 }
-.btn_constr {
+#btn_constr_file {
     width: 80px;
     height: 40px;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 3px;
     margin: 5px;
+}
+#file_constr {
+    width: 180px;
+    margin: 10px auto;
+}
+#constructor_canvas {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
 }
 .c_show {
     display: block;
